# ZephyrV2

./: .editorconfig  .gitignore  README  README.md  ReadMe  TechincalOverview.md  docker-compose.monitoring.yml  docker-compose.services.yml  docker-compose.yml  feature-list.md  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature.request.md
.github/config/: settings.yml
.github/workflows/: build.yml  ci.yml  lint.yml  performance.yml
apps/: babel.config.js  package.json
apps/docs/: package.json  tsconfig.json
apps/docs/src/: Readme
apps/mobile/: package.json  tsconfig.json
apps/web/: bun.lockb  example.env  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  todo-list.md  tsconfig.json
apps/web/drizzle/: 0000_nappy_surge.sql  0001_safe_archangel.sql  0002_groovy_silver_fox.sql  0003_glossy_doorman.sql  0004_brainy_millenium_guard.sql
benchmarks/: overview.md  run-benchmarks.sh
benchmarks/k6/: load-test.js
infrastructure/: setup.sh
infrastructure/terraform/: main.tf
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: web.conf
protos/: documentation.md
prototyping/compiler-concept-next/backend/: Cargo.toml  build.sh  verify.sh
prototyping/compiler-concept-next/backend/docker/cpp/: Dockerfile
prototyping/compiler-concept-next/backend/docker/csharp/: Dockerfile
prototyping/compiler-concept-next/backend/docker/javascript/: DockerFIle  tsconfig.json
prototyping/compiler-concept-next/backend/docker/python/: DockerFIle
prototyping/compiler-concept-next/backend/docker/rust/: DockerFIle
prototyping/compiler-concept-next/backend/docker/typescript/: DockerFile
prototyping/compiler-concept-next/backend/docker/zig/: Dockerfile
prototyping/compiler-concept-next/backend/src/: config.rs  error.rs  main.rs
prototyping/video-analysis-nextrust/: TODO.md  setup-doc.md  setup.sh
prototyping/video-analysis-nextrust/gateway/: Cargo.toml  Dockerfile.dev
prototyping/video-analysis-nextrust/gateway/src/: error.rs  main.rs
prototyping/video-analysis-nextrust/gateway/src/config/: mod.rs
prototyping/video-analysis-nextrust/gateway/src/handlers/: health.rs  mod.rs  vector.rs  video.rs
prototyping/video-analysis-nextrust/gateway/src/middleware/: rate_limit.rs
prototyping/video-analysis-nextrust/gateway/src/models/: mod.rs  vector.rs  video.rs
prototyping/video-analysis-nextrust/gateway/src/services/: archive.rs  indexing.rs  mod.rs  rate_limit.rs  redis.rs  search.rs  video.rs
scripts/: generate-protos.sh
services/cache/: Dockerfile  gleam.toml  manifest.toml
services/compute/: Cargo.toml  Dockerfile
services/compute/src/: main.rs
services/compute/zephyr_rust_service/: Cargo.toml
services/compute/zephyr_rust_service/src/: main.rs
services/compute/zephyr_rust_service/src/ai/: gemini.rs  mod.rs
services/compute/zephyr_rust_service/src/formatting/: mod.rs
services/compute/zephyr_rust_service/src/ipc/: mod.rs  phoenix.rs
services/gateway/: Dockerfile  go.mod  go.sum
services/realtime/: Dockerfile  mix.exs
(+190 files in other folders)
