[package]
name = "zephyr-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.4", features = ["trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
