[package]
name = "video-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4.39"
zip = "2.2.2"
futures-util = "0.3.31"
aio = "0.1.0"

